snapshots/care/data4life/hc-result-sdk-kmp/error/ecb7fdf/error-ecb7fdf-sources.jar.sha256
557bf579fcee2fdbd7e6346043a931c8391d42599ca6af49a0557194a71e14f4